ひとまず完成

--- a/KancopySaihu/KancopySaihu.vcxproj.filters
+++ b/KancopySaihu/KancopySaihu.vcxproj.filters
@@ -107,4 +107,7 @@
       <Filter>source</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
 </Project>
